--- a/css/liebiao.css
+++ b/css/liebiao.css
@@ -162,7 +162,7 @@ body{
 .banner{
     width: 100%;
     height: 301px;
-    background: url(../images/bg.png);
+    background: url(../images/touzi-liebiao/bg.png);
 }
 
 /* banner */
