--- a/css/liebiao.css
+++ b/css/liebiao.css
@@ -91,14 +91,16 @@ body{
     margin-left: 10px;
 }
 
-.header .h_bottom .h_b_content .logo li h2{
+.header .h_bottom .h_b_content .logo li h2 a{
     font-family: '幼圆';
     font-size: 20px;
+    color: #313131;
 }
 
-.header .h_bottom .h_b_content .logo li span{
+.header .h_bottom .h_b_content .logo li span a{
     font-size: 20px;
     font-weight: bold;
+    color: #313131;
 }
 
 .header .h_bottom .h_b_content .logo li:nth-child(2){
